--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ h3{
   --crazyQuizPurple:#9900ff;
 
   /* Couleurs des catégories */
-  --colorHtml: #e44d26;
+  --colorHTML: #e44d26;
   --colorCSS: #264de4;
   --colorJS: #f7e018;
   --colorReact:#61dbfb;
