--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,10 @@ h3{
   margin: 20px;
 }
 
+button{
+  cursor: pointer;
+  border: none;
+}
 .colorHTML{
   background-color: var(--colorHTML);
   color: var(--white);
