--- a/src/App.css
+++ b/src/App.css
@@ -53,15 +53,15 @@
   list-style: none;
 }
 
-h1{
-  font-size: 100px;
+h1 , legend{
+  font-size: 50px;
   font-family: 'Bangers', cursive;
   font-weight: lighter;
   color: var(--title);
   text-align: center;
 }
 
-h2, h3, p, a, label {
+h2, h3, p, a, label{
   font-family: 'Overlock', cursive;
 }
 
@@ -74,7 +74,7 @@ h3{
   padding: 40px;
 }
 
-p, a, label, input, button {
+p, a, input, button {
   font-size: 30px;
   padding: 20px;
   color: var(--text);
@@ -85,7 +85,6 @@ main{
   width: 90%;
   display: flex;
   flex-direction: column;
-  gap: 40px;
 }
 
 h3{
@@ -93,12 +92,17 @@ h3{
   margin: 20px;
 }
 
+
 button{
   cursor: pointer;
   border: none;
   color: var(--textButton);
   background-color: var(--backgroundButton);
   border-radius: 10px;
+  font-family: 'Bangers', cursive;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 70%;
 }
 
 button:hover{
@@ -110,12 +114,9 @@ input{
   outline: none;
   border: none;
   border-radius: 10px;
-  margin-top: 10px;
-  width: 90%;
-}
-
-label{
-  padding-left: 0;
+  margin-top: 30px;
+  width: 70%;
+  ;
 }
 
 input::placeholder{
@@ -160,12 +161,4 @@ input:focus{
 
 .ReactButtonColor:hover{
   background-color: var(--colorReactHover);
-}
-
-body{
-  background-color: violet;
-}
-
-img{
-  width: 200px;
 }
