--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,12 @@ main{
   width: 90%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
+a{
+  text-align: center;
+}
 h3{
   font-size: 30px;
   margin: 20px;
