--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -4,7 +4,7 @@
 
  .main-cate button {
     
-    margin: -10px; 
+    /* margin: -10px;  */
     height: 110px;
     width: 80vw;
     border-radius: 0;
