--- a/src/components/ConnexionInscription/ConnexionInscription.css
+++ b/src/components/ConnexionInscription/ConnexionInscription.css
@@ -1,20 +1,34 @@
 fieldset {
-  border: 3px solid black;
+  border: 2px solid black;
+  margin: 15px;
   border-radius: 20px;
   text-align: center;
   column-gap: 30px;
 }
 
+fieldset input {
+  margin-top: 30px;
+  padding: 10px 0 7px 20px;
+  height: 40px;
+  width: 80%;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(223, 223, 223);
+}
+
+
 legend {
   display: block;
   margin: auto;
   padding: 0px 20px;
+  font-size: 20px;
 }
 
 .label {
   width: 100%;
   display: flex;
 }
+
 .checkbox {
   display: flex;
   justify-content: center;
@@ -25,10 +39,12 @@ legend {
   margin: 0;
   padding: 0;
   width: 15px;
+  
 }
 
 input::placeholder {
   font-size: 20px;
+  color: black;
 }
 
 .inscrit {
@@ -42,10 +58,9 @@ input::placeholder {
 
 .conteneurModal{
     position: absolute;
-    left: 8%;
+    left: 5%;
     top: 15%;
-    width: 80%;
-    margin: auto;
+    width: 85%; 
     background-color: white;
     border-radius: 20px;
     padding: 10px;
@@ -68,12 +83,13 @@ input::placeholder {
   margin-right: 56px;
 }
 
-button.close {
+.centre .close {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 19%;
-  background-color: var(--crazyQuizPurple);
+  color: var(--crazyQuizPurple);
+  background-color: var(--white);
 }
 
 .overlay {
