--- a/src/styles/Resultat.css
+++ b/src/styles/Resultat.css
@@ -1,34 +1,41 @@
-.resultat {
+ .resultat {
     display: flex;
     align-items: center;
-    margin-left: 50px;
-    margin-top: 20px;
-}
+    justify-content: space-between;
+    margin: -20px 20px 10px 20px;
+ }
 
-header .logo {
+ header .logo {
     height: 50px;
 }
 
 header .profile {
-    height: 100px;
+    width: 100px;
 }
-
+ 
 .result-content {
     text-align: center;
     margin-top: 100px;
 }
 
 .result-content button {
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
-    width: 280px;
+    border: none;
+    background-color: var(--crazyQuizOrange);
+    color: var(--textButton);
+    padding: 25px;
+    width: 80%;
+    margin:auto;
+    text-align: center;
+    margin-bottom: 50px;
+    font-family: 'Bangers', cursive;
+    font-size: 30px;
 }
 
-
-
-.timer{
-    width: 80px;
-}
-
-span{
-    font-size: 50px;
+p{
+    font-size: 20px;
+    margin: 30px 40px;
+    font-family: 'Noto Sans', sans-serif;
 }
