--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,13 @@
   margin-top: 50%;
 }
 
+.CupGif{
+  margin-top: -100px;
+  width: 390px;
+  height: 300px;
+  object-fit: cover;
+}
+
 .conteneurQuiz{
   padding-top: 20px;
   width: 90%;
@@ -207,16 +214,18 @@ img{
 }
 
 .pStart{
-  margin-top: 50px;
   text-align: center;
   color: white;
 }
 
+.Gif{
+  margin-top: -50px;
+  width: 390px;
+}
 button.BtnStart{
   margin: auto;
   display: flex;
   justify-content: center;
   margin-top: 60px;
-  
 }
 
