--- a/src/App.css
+++ b/src/App.css
@@ -81,16 +81,18 @@
 
 .conteneurTimer{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   column-gap: 30px;
   padding-top: 20px;
+  min-height: 125px;
 }
 
 .conteneurTimer span {
-  font-size: 25px;
-  font-weight: bold;
-  font-family: 'Noto Sans', sans-serif;
+  font-size: 35px;
+  font-weight: lighter;
+  /* font-family: 'Noto Sans', sans-serif; */
+  font-family: 'Bangers', cursive;
 }
 
 .timer {
@@ -98,12 +100,17 @@
 }
 
 .BtnExit{
-  background-color: var(--crazyQuizOrange);
-  color: var(--white);
+  background-color: white;
+  color: var(--crazyQuizPurple)
+
  }
 
  .BtnExitContainer button{
   margin: 0;
+ }
+
+ .BtnExitContainer {
+  /* padding-left: 30px; */
  }
 
 .conteneurReponse{
@@ -219,7 +226,7 @@ img{
 }
 
 .Gif{
-  margin-top: -50px;
+  /* margin-top: -50px; */
   width: 390px;
 }
 button.BtnStart{
