message alert button retour

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,13 @@ body{
 .BtnExit{
   background-color: var(--darkGray);
   color: var(--crazyQuizOrange);
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  font-family: 'Bangers', cursive;
+  font-size: 30px;
+  padding: 25px;
 
  }
 
