--- a/src/styles/Accueil.css
+++ b/src/styles/Accueil.css
@@ -10,6 +10,7 @@
     margin:auto;
     text-align: center;
     width: 80%;
+    box-sizing: border-box;
 }
 
 .acc button {
@@ -20,8 +21,6 @@
     /* border-radius: 10px; */
     font-family: 'Bangers', cursive;
     font-size: 30px;
-    margin-top: 35px;
-    margin-bottom: 5px;
     padding: 25px;
     width: 100%;
    /* height: 100px; */
@@ -41,12 +40,16 @@
     /* border-radius: 10px; */
     font-family: 'Bangers', cursive;
     font-size: 30px;
-    margin-top: 50px;
-    margin-bottom: 50px;
     padding: 25px;
+    margin-bottom: 50px;
     /* width: 80%; */
 }
 
 .Connexion{
-    margin-top: 80px;
+    margin:0;
+    margin-top: 150px;
+}
+
+.Connexion button{
+    margin-bottom: 50px;
 }
