--- a/src/styles/Resultat.css
+++ b/src/styles/Resultat.css
@@ -36,7 +36,7 @@ header .profile {
 }
 
 p{
-    font-size: 20px;
-    margin: 30px 40px;
-    font-family: 'Noto Sans', sans-serif;
+    font-size: 22px;
+    margin: 10px 40px;
+    font-family: 'Overlock', cursive;
 }
