--- a/src/styles/Resultat.css
+++ b/src/styles/Resultat.css
@@ -37,6 +37,6 @@ header .profile {
 
 p{
     font-size: 22px;
-    margin: 10px 40px;
+    margin: 0px 40px 15px;
     font-family: 'Overlock', cursive;
 }
