--- a/src/App.css
+++ b/src/App.css
@@ -234,10 +234,10 @@ img{
 .pStart{
   text-align: center;
   color: rgb(0, 0, 0);
+  margin-top: 30px;
 }
 
 .Gif{
-  /* margin-top: -50px; */
   width: 390px;
 }
 button.BtnStart{
