--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ body{
 
 .CupGif{
   margin-top: -100px;
-  height: 300px;
+  height: 250px;
   object-fit: cover;
 }
 
@@ -212,7 +212,7 @@ img{
 }
 
 .ImgHTML{
-  margin-top: 50px;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
 }
@@ -238,6 +238,8 @@ img{
 }
 
 .Gif{
+  padding: 0;
+  margin-top: -40px;
   width: 390px;
 }
 button.BtnStart{
